# SearchEngineProject

./: .gitignore  CMakeLists.txt
src/: Index3.java  Index4.java  Index5.cpp  Index5.h  Main.cpp  Main.java
src/components/preprocessors/: BasicPreprocessor.cpp  BasicPreprocessorHandlesPunctuation.cpp
src/components/rankers/: MostMatchesRanker.cpp
src/components/searchers/: BasicSearcher.cpp  BooleanSearcher.cpp
src/components/sorters/: MergeSort.cpp  testSorter.cpp
src/components/stores/: BasicHashTable.cpp  LinearProbingTable.cpp
src/components/test/: test.cpp
src/core/: interfaces.h
src/extras/helpers/: FileHelpers.cpp
src/extras/java/: Test.java
